--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,4 +45,4 @@ jobs:
     - name: Test with pytest for MicroServices/ImageManipulation
       run: |
         cd MicroServices/ImageManipulation && \
-        pytest
+        ./tests/test_server.sh             
