--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,4 +45,5 @@ jobs:
     - name: Test with pytest for MicroServices/ImageManipulation
       run: |
         cd MicroServices/ImageManipulation && \
-        ./tests/test_server.sh             
+        ./tests/test_server.sh             && \
+        cd ./tests && pytest test_util.py
