--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,4 +44,4 @@ jobs:
 
     - name: Test with pytest for MicroServices/ImageManipulation
       run: |
-        cd ./tests && pytest test_util.py
+        cd ./MicroServices/ImageManipulation/tests && pytest test_util.py
