--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         dockerfile-path: 
-          - { path: ".", tag: "my-image-name-root:$(date +%s)" }
+          - { path: ".", tag: "gomanip:$(date +%s)" }
           - { path: "MicroServices/ImageManipulation", tag: "my-image-name-image-manipulation:$(date +%s)" }
 
     steps:
