--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,7 @@ jobs:
       - name: Build
         run: go build -v ./...
 
-      - name: Run tests
+      - name: Run tests for core application
         run: go test -v ./...
+      - name: Run tests for ImageManipulation microservice
+        run: go test -v ./Microservices/ImageManipulation/...
