--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,5 @@ jobs:
       - name: Run tests for core application
         run: go test -v ./...
       - name: Run tests for ImageManipulation microservice
-        run: go test -v ./Microservices/ImageManipulation/...
+        working-directory: ./Microservices/ImageManipulation/
+        run: go test -v ./...
