--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,4 @@ jobs:
       - name: Run tests for core application
         run: go test -v ./...
       - name: Run tests for ImageManipulation microservice
-        working-directory: Microservices/ImageManipulation/
-        run: go test -v ./...
+        run: go test -v ./MicroServices/ImageManipulation/...
