--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
         go-version: [ '1.21.x' ]
 
     steps:
+      - name: Docker Setup Buildx
+        uses: docker/setup-buildx-action@v3.10.0
+      
       - name: Checkout code
         uses: actions/checkout@v4
 
