--- a/MicroServices/Ml/Classification/requirements.txt
+++ b/MicroServices/Ml/Classification/requirements.txt
@@ -10,15 +10,24 @@ click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.115.12
+fastapi-cli==0.0.7
 filelock==3.18.0
 fsspec==2025.5.0
+h11==0.16.0
 hf-xet==1.1.2
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
 huggingface-hub==0.32.0
 idna==3.10
 Jinja2==3.1.6
 kombu==5.5.3
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.6
@@ -36,17 +45,24 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 packaging==25.0
+pillow==11.2.1
 prompt_toolkit==3.0.51
 psutil==7.0.0
 pydantic==2.11.5
 pydantic_core==2.33.2
+Pygments==2.19.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-multipart==0.0.20
 PyYAML==6.0.2
 redis==6.1.0
 regex==2024.11.6
 requests==2.32.3
+rich==14.0.0
+rich-toolkit==0.14.6
 safetensors==0.5.3
 setuptools==80.8.0
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
@@ -56,9 +72,14 @@ torch==2.6.0
 tqdm==4.67.1
 transformers==4.52.3
 triton==3.2.0
+typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
+uvicorn==0.34.2
+uvloop==0.21.0
 vine==5.1.0
+watchfiles==1.0.5
 wcwidth==0.2.13
+websockets==15.0.1
