--- a/MicroServices/Ml/Classification/requirements.txt
+++ b/MicroServices/Ml/Classification/requirements.txt
@@ -31,19 +31,6 @@ mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.6
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
 packaging==25.0
 pillow==11.2.1
 prompt_toolkit==3.0.51
@@ -66,12 +53,11 @@ shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
-sympy==1.13.1
+sympy>=1.13.1
 tokenizers==0.21.1
-torch==2.6.0
+torch==2.7.1
 tqdm==4.67.1
 transformers==4.52.3
-triton==3.2.0
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.13.2
