--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,15 +45,13 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Build Classification container with cache
+      - name: Build Classification container
         uses: docker/build-push-action@v5
         with:
           context: ./MicroServices/Ml/Classification
           target: tester
           tags: class-test
-          load: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+
       - name: Run the GoManip docker image tests
         run: docker run --rm gomanip-test
       - name: Run the Bot docker image tests
