--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,17 +45,26 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Build Classification container
+      - name: Build Classification container (backend tests)
         uses: docker/build-push-action@v5
         with:
-          context: ./MicroServices/Ml/Classification
+          context: ./MicroServices/Ml/Classification/Backend
           target: tester
           tags: class-test
           load: true
+      - name: Build Classification container (Frontend api)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./MicroServices/Ml/Classification/
+          target: tester
+          tags: class-test
+          load: true
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Run the GoManip docker image tests
         run: docker run --rm gomanip-test
       - name: Run the Bot docker image tests
         run: docker run --rm bot-test
-      - name: Run the classification docker image tests
+      - name: Run the classification backend docker image tests
         run: docker run --rm class-test
