--- a/MicroServices/Ml/Classification/Dockerfile.backend
+++ b/MicroServices/Ml/Classification/Dockerfile.backend
@@ -5,7 +5,7 @@ FROM python:3.13.3-slim AS tester
 WORKDIR /app
 
 COPY . .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r  backend_requirements.txt
 RUN pip install --no-cache-dir pytest
 
 CMD ["pytest", "-v"]
