--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v3.10.0
+      - name: Prune Docker buildx cache older than 24 hours
+        run: docker buildx prune --filter "until=24h" -f
       
       - name: Checkout code
         uses: actions/checkout@v4
