--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ on:
       - main
 
 jobs:
-  
   test-bot:
     runs-on: ubuntu-latest
     strategy:
@@ -28,65 +27,50 @@ jobs:
         run:  make vet 
       - name: run tests 
         run:  make test-coverage
-
-
-  build:
-
+  test-gomanip:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         go-version: [ '1.21.x' ]
-
-    steps:
+    
+    steps: 
+      - uses: actions/checkout@v4
+      
+      # because gomanip uses GoCV, which needs OpenCV, we have to use the container environment with Opencv 
+      # to build it.
+      # TODO: get the opencv container environment on dockerhub so we don't have to build it each time.
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v3.10.0
       - name: Prune Docker buildx cache older than 24 hours
         run: docker buildx prune --filter "until=24h" -f
-      
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Build ImageManipulation microservice container with cache
+      - name: Build gomanip container 
         uses: docker/build-push-action@v5
         with:
-          context: ./MicroServices/ImageManipulation
+          context: ./services/GoManip/
           target: tester
           tags: gomanip-test
           load: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
-      - name: Build Main Bot container with cache
-        uses: docker/build-push-action@v5
-        with:
-          context: ./MicroServices/ImageManipulation
-          target: tester
-          tags: bot-test
-          load: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Build Classification container (backend tests)
-        uses: docker/build-push-action@v5
-        with:
-          context: ./MicroServices/Ml/Classification/
-          target: tester
-          tags: class-test
-          load: true
-          file: ./MicroServices/Ml/Classification/Dockerfile.backend
-      - name: Build Classification container (Frontend api)
-        uses: docker/build-push-action@v5
-        with:
-          context: ./MicroServices/Ml/Classification/
-          file: ./MicroServices/Ml/Classification/Dockerfile.fastapi
-          tags: class-fastapi
-          load: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
       - name: Run the GoManip docker image tests
         run: docker run --rm gomanip-test
-      - name: Run the Bot docker image tests
-        run: docker run --rm bot-test
-      - name: Run the classification backend docker image tests
-        run: docker run --rm class-test
+  
+  test-classification:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v5
+    - uses: actions/setup-python@v6
+      with:
+        python-version: '3.13' 
+    - name: install deps 
+      run: pip install --no-cache-dir -r  backend_requirements.txt
+      working-directory: ./services/Ml/Classification/
+    - name: install pytest  
+      run: pip install --no-cache-dir pytest
+      working-directory: ./services/Ml/Classification/
+    - name: run tests 
+      run: pytest -v 
+      working-directory: ./services/Ml/Classification/
+
+
+
