--- a/services/GoManip/Dockerfile
+++ b/services/GoManip/Dockerfile
@@ -1,33 +1,4 @@
-FROM debian:bookworm AS opencv-builder
-
-ENV DEBIAN_FRONTEND=noninteractive
-
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential cmake git pkg-config curl ca-certificates \
-    libgtk-3-dev libavcodec-dev libavformat-dev libswscale-dev libv4l-dev \
-    libxvidcore-dev libx264-dev libjpeg-dev libpng-dev libtiff-dev libopenexr-dev \
-    libtbb-dev libeigen3-dev libatlas-base-dev gfortran \
-    unzip wget && \
-    rm -rf /var/lib/apt/lists/*
-
-WORKDIR /opt
-RUN git clone --branch 4.11.0 --depth 1 https://github.com/opencv/opencv.git && \
-    git clone --branch 4.11.0 --depth 1 https://github.com/opencv/opencv_contrib.git
-
-WORKDIR /opt/opencv/build
-RUN cmake -D CMAKE_BUILD_TYPE=Release \
-          -D CMAKE_INSTALL_PREFIX=/usr/local \
-          -D OPENCV_EXTRA_MODULES_PATH=/opt/opencv_contrib/modules \
-          -D OPENCV_GENERATE_PKGCONFIG=ON \
-          -D BUILD_EXAMPLES=OFF \
-          -D BUILD_TESTS=OFF \
-          -D BUILD_DOCS=OFF \
-          -D BUILD_opencv_python3=OFF \
-          .. && \
-    make -j$(nproc) && make install && ldconfig
-
-
-FROM debian:bookworm AS go-builder
+FROM trolllemon/opencv4.11.0:alpha AS gocv-builder 
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -40,12 +11,6 @@ ENV GO_VERSION=1.24.0
 RUN curl -fsSL https://go.dev/dl/go${GO_VERSION}.linux-amd64.tar.gz | tar -C /usr/local -xz
 
 ENV PATH="/usr/local/go/bin:${PATH}"
-
-# Copy OpenCV libraries and includes from the opencv-builder stage
-COPY --from=opencv-builder /usr/local/lib /usr/local/lib
-COPY --from=opencv-builder /usr/local/include/opencv4 /usr/local/include/opencv4
-COPY --from=opencv-builder /usr/local/share/opencv4 /usr/local/share/opencv4
-
 ENV PKG_CONFIG_PATH=/usr/local/lib/pkgconfig
 ENV CGO_CPPFLAGS="-I/usr/local/include/opencv4"
 ENV CGO_LDFLAGS="-L/usr/local/lib"
@@ -70,9 +35,9 @@ RUN ldd /app/gomanip | grep "=>" | awk '{print $3}' | xargs -I '{}' sh -c 'if [ 
 
 
 FROM golang:tip-bookworm AS tester
-COPY --from=opencv-builder /usr/local/lib /usr/local/lib
-COPY --from=opencv-builder /usr/local/include/opencv4 /usr/local/include/opencv4
-COPY --from=opencv-builder /usr/local/share/opencv4 /usr/local/share/opencv4
+COPY --from=gocv-builder /usr/local/lib /usr/local/lib
+COPY --from=gocv-builder /usr/local/include/opencv4 /usr/local/include/opencv4
+COPY --from=gocv-builder /usr/local/share/opencv4 /usr/local/share/opencv4
 
 ENV PKG_CONFIG_PATH=/usr/local/lib/pkgconfig
 ENV CGO_CPPFLAGS="-I/usr/local/include/opencv4"
@@ -100,9 +65,9 @@ CMD ["go", "test", "-v", "-cover", "-race", "-count=1", "./..."]
 FROM gcr.io/distroless/cc-debian12 AS application
 
 ENV LD_LIBRARY_PATH=/usr/local/lib
-COPY --from=go-builder /opt/app/libs /usr/lib/
+COPY --from=gocv-builder /opt/app/libs /usr/lib/
 
-COPY --from=go-builder /app/gomanip /
+COPY --from=gocv-builder /app/gomanip /
 
 EXPOSE 8080
 
