--- a/.github/workflows/publish-classification.yaml
+++ b/.github/workflows/publish-classification.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: ./services/Ml/Classification 
-          file: {context}/Dockerfile.fastapi
+          file: ./services/Ml/Classification/Dockerfile.fastapi
           tags: ${{ env.version_api }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
