--- a/.github/workflows/publish-gomanip.yaml
+++ b/.github/workflows/publish-gomanip.yaml
@@ -19,6 +19,7 @@ jobs:
       id-token: write
 
     steps:
+      - uses: actions/checkout@v4
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
 
