--- a/.github/workflows/publish-bot.yaml
+++ b/.github/workflows/publish-bot.yaml
@@ -47,3 +47,4 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          push: true
