--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,11 @@
-name: Go CI
+name: CI
 permissions:
   contents: read
   pull-requests: write
 on: 
-  push:
-    branches:
-      - main
   pull_request:
     branches:
-      - main
+      - develop
 
 jobs:
   test-bot:
