--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-            go-version-file: 'go.mod'
+            go-version-file: './bot/go.mod'
             cache: true
       - name: Vet go packages
         run:  make vet 
