--- a/.github/workflows/publish-bot.yaml
+++ b/.github/workflows/publish-bot.yaml
@@ -2,7 +2,7 @@ name: Build and publish bot to docker hub
 
 on:
   push:
-    tags: [ 'v*.*.*' ]
+    branch: [ 'release/bot' ]
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -20,6 +20,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:  
+          fetch-depth: 0 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
 
@@ -29,14 +31,15 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_GITHUB_TOKEN }}
-
+      - name: get tag from commit 
+          TAG=$(git describe --tags --abbrev=0)
+          echo "Latest tag: $TAG"
+          echo "version=${TAG}_edge" >> $GITHUB_ENV
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-      - name: extract version from VERSION file
-        run: echo "version=$(cat ./VERSION)" >> $GITHUB_ENV
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
