--- a/.github/workflows/publish-classification.yaml
+++ b/.github/workflows/publish-classification.yaml
@@ -2,7 +2,7 @@ name: Build and publish classification service to docker hub
 
 on:
   push:
-    tags: [ 'v*.*.*' ]
+    tags: [ 'release/classification' ]
 
 env:
   REGISTRY: docker.io
@@ -31,8 +31,10 @@ jobs:
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.API_IMAGE_NAME }}
-      - name: extract api version from VERSION.api
-        run: echo "version_api=$(cat ./services/Ml/Classification/VERSION.api)" >> $GITHUB_ENV
+      - name: get tag from commit 
+          TAG=$(git describe --tags --abbrev=0)
+          echo "Latest tag: $TAG"
+          echo "version=${TAG}_edge" >> $GITHUB_ENV
       - name: Build and push Docker image for API image
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
@@ -67,8 +69,10 @@ jobs:
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE_NAME }}
-      - name: extract backend version from VESION.backend 
-        run: echo "version_backend=$(cat ./services/Ml/Classification/VERSION.backend)" >> $GITHUB_ENV
+      - name: get tag from commit 
+          TAG=$(git describe --tags --abbrev=0)
+          echo "Latest tag: $TAG"
+          echo "version=${TAG}_edge" >> $GITHUB_ENV
       - name: Build and push Docker image for API image
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
