react to push events on v*.*.* branches

--- a/.github/workflows/publish-classification.yaml
+++ b/.github/workflows/publish-classification.yaml
@@ -2,7 +2,8 @@ name: Build and publish classification service to docker hub
 
 on:
   push:
-    tags: [ 'release/classification' ]
+     branches:
+      - 'release/classification-v*.*.*'
 
 env:
   REGISTRY: docker.io
