--- a/.github/workflows/publish-classification.yaml
+++ b/.github/workflows/publish-classification.yaml
@@ -32,7 +32,8 @@ jobs:
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.API_IMAGE_NAME }}
-      - name: get tag from commit 
+      - name: get tag from commit
+        run: |
           TAG=$(git describe --tags --abbrev=0)
           echo "Latest tag: $TAG"
           echo "version=${TAG}_edge" >> $GITHUB_ENV
